--- a/app/about/index.html
+++ b/app/about/index.html
@@ -11,7 +11,7 @@
 
     <!-- favicon.ico and apple-touch-icon.png in the root directory -->
 
-    <link rel="stylesheet" href="../style/css/style.css">
+    <link rel="stylesheet" href="style/style.css">
 
     <script type="text/javascript" src="//use.typekit.net/nxm7llc.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
@@ -54,12 +54,12 @@
   </header>
   <section class="canvs-origins-section">
     <div class="container">
+      <header class="section-header-wrap">
+        <h1 class="section-header">Canvs Origins</h1>
+        <p class="section-description">Since 2010, Mashwork analysts have been delivering reports to the world’s top brands. Our observations led us to creating Canvs and assure us it’s a compelling tool.</p>
+      </header>
       <div class="row">
         <div class="canvs-origins-box">
-          <header class="section-header-wrap">
-            <h1 class="section-header">Canvs Origins</h1>
-            <p class="section-description">Since 2010, Mashwork analysts have been delivering reports to the world’s top brands. Our observations led us to creating Canvs and assure us it’s a compelling tool. </p>
-          </header>
           <div class="row">
             <div class="content-box jared"><img src="../images/team/jared.jpg" class="canvs-origins-image"/>
               <h2>Jared Feldman</h2>
@@ -73,7 +73,7 @@
           <p>Mashwork was established in 2010 by entrepreneur Jared Feldman and Stern School of Business professor, Sam Hui, PhD. We excel in synthesizing data from countless best-in-class tools to deliver actionable insights.</p>
           <p>Canvs&#8482;, Mashwork’s proprietary social TV analytics platform, provides scalable measurement and qualitative analysis of Twitter reactions to entertainment content. Our technology is based on years of R&amp;D, and was tested in private beta with top content providers like Viacom and Time Warner.</p>
         </div>
-      </div><a href="/" class="action-btn learn-services-btn">Learn About Services</a>
+      </div><a href="http://mashwork.com" class="action-btn learn-services-btn">Learn About Services</a>
     </div>
   </section>
   <section class="canvs-advisors-section">
@@ -106,36 +106,19 @@
     </div>
   </section>
 </div>
-    footer.page-footer
-  ul.social-links
-    li.twitter-link
-      a(href="https://www.twitter.com/mashwork", target="_blank")
-        img.social-icon(src="http://mashwork.com/canvs/images/twitter-icon.svg")
-    li.facebook-link
-      a(href="https://www.facebook.com/mashwork", target="_blank")
-        img.social-icon(src="http://mashwork.com/canvs/images/facebook-icon.svg")
-    li.linkedin-link
-      a(href="https://www.linkedin.com/company/mashwork", target="_blank")
-        img.social-icon(src="http://mashwork.com/canvs/images/linkedin-icon.svg")
-
-  p.copyright 
-    | &copy; 2014 Mashwork, Inc. &nbsp;•&nbsp; All rights reserved. &nbsp;•&nbsp; 
-    a(href="/privacy", target="_blank") Privacy Policy
-
-  p.contact-info 
-    a(href="https://goo.gl/maps/slKfo", target="_blank") 11 W. 25th St, 7th Fl, New York, NY 10010
-    | • 
-    a(href="tel:1-646-201-9124") 646-201-9124
-    | • 
-    a(href="/about") About Us 
-    | • 
-    a(href="http://mashwork.com/blog") New
-
-  a.made-in-ny(href="http://wearemadeinny.com/")
-    img(src="http://mashwork.com/canvs/images/logos/made-in-ny-logo.svg")
+    
+<footer class="page-footer">
+  <ul class="social-links">
+    <li class="twitter-link"><a href="https://www.twitter.com/mashwork" target="_blank"><img src="http://mashwork.com/canvs/images/twitter-icon.svg" class="social-icon"/></a></li>
+    <li class="facebook-link"><a href="https://www.facebook.com/mashwork" target="_blank"><img src="http://mashwork.com/canvs/images/facebook-icon.svg" class="social-icon"/></a></li>
+    <li class="linkedin-link"><a href="https://www.linkedin.com/company/mashwork" target="_blank"><img src="http://mashwork.com/canvs/images/linkedin-icon.svg" class="social-icon"/></a></li>
+  </ul>
+  <p class="copyright">&copy; 2014 Mashwork, Inc. &nbsp;•&nbsp; All rights reserved. &nbsp;•&nbsp; <a href="/privacy" target="_blank">Privacy Policy</a></p>
+  <p class="contact-info"><a href="https://goo.gl/maps/slKfo" target="_blank">11 W. 25th St, 7th Fl, New York, NY 10010</a>• <a href="tel:1-646-201-9124">646-201-9124</a>• <a href="/about">About Us </a>• <a href="http://mashwork.com/blog">New</a></p><a href="http://wearemadeinny.com/" class="made-in-ny"><img src="http://mashwork.com/canvs/images/logos/made-in-ny-logo.svg"/></a>
+</footer>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="bower_components/html5-boilerplate/js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-    <script src="scripts/min/main-min.js"></script>
+    <script src="scripts/main-min.js"></script>
 
     <!-- Google Analytics -->
 <script>
